--- a/prepros.config
+++ b/prepros.config
@@ -918,6 +918,18 @@
         "config": {
           "autoCompile": false
         }
+      },
+      {
+        "file": "styles/Sass/Blocks/main.scss",
+        "config": {
+          "autoCompile": false
+        }
+      },
+      {
+        "file": "styles/Sass/Blocks/slider.scss",
+        "config": {
+          "autoCompile": false
+        }
       }
     ]
   }
